Fix cursor: better spacing, smaller size, working animation

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -123,17 +123,13 @@ a:hover {
 
 .cursor {
   color: var(--accent);
-  animation: blink 1s step-end infinite;
-  margin-left: 2px;
+  font-size: 0.8em;
+  margin-left: 0.4em;
+  display: inline-block;
+  animation: blink 1s step-start infinite;
 }
 
 @keyframes blink {
-
-  0%,
-  100% {
-    opacity: 1;
-  }
-
   50% {
     opacity: 0;
   }
